# topomop

./: LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml
doc/render/: README.md  omop_cdm_cdmv6_0_CDM.py  omop_cdm_cdmv6_0_VOCAB.py
doc/render/v5.3/: omop_cdm_cdmv5_3_CDM.py  omop_cdm_cdmv5_3_VOCAB.py
doc/render/v5.4/: omop_cdm_cdmv5_4_CDM.py  omop_cdm_cdmv5_4_RESULTS.py  omop_cdm_cdmv5_4_VOCAB.py
doc/render/v6.0/: omop_cdm_cdmv6_0_CDM.py  omop_cdm_cdmv6_0_RESULTS.py  omop_cdm_cdmv6_0_VOCAB.py
src/topomop/: cdm_Oncology_Ex.py  cdm_csv.py  cdmv5_3.py  cdmv5_4.py  cdmv6_0.py  convert.py  sqlalchemy_declarative.py.jinja2  sqlalchemy_imperative.py.jinja2  translate.py
tests/: test_cdm_csv.py  test_translate.py
